--- a/Source code/从元宵节点灯想到数据备份的重要性.md
+++ b/Source code/从元宵节点灯想到数据备份的重要性.md
@@ -45,7 +45,7 @@ categories: notes
 数据备份确实很重要！
 
 
-所以我把我博客的源码及配置文件都进行了备份操作，本机自带有一份，`GitHub`一份，然后谷歌硬盘一份，当然还可以放其他地方。懒得放那么多地方，一式三份算是基本可以了。
+所以我把我博客的源码及配置文件都进行了备份操作，本机自带有一份，`GitHub`一份，然后谷歌云端硬盘一份，当然还可以放其他地方。懒得放那么多地方，一式三份算是基本可以了。
 
 
 ![](https://ws1.sinaimg.cn/large/006Y6f53gy1fp0rt2jjtmj30v40h2dhz.jpg)
