--- a/Source code/从元宵节点灯想到数据备份的重要性.md
+++ b/Source code/从元宵节点灯想到数据备份的重要性.md
@@ -55,14 +55,14 @@ categories: notes
 ![](https://ws1.sinaimg.cn/large/006Y6f53gy1fp0rtblww7j30zn0hvq3q.jpg)
 
 
-接下来我要有时间的话，还会对图片进行备份操作，就放在微博图床上感觉不是蛮好。
+
 
 我这样的目的，就是想像分布式/区块链那样，即使我的这份文件数据丢失了，但是那个地方还是保存有我的数据备份文件。
 
-由于我的是cn域名，本身也带有一些违反中国法律的内容，所以希望各位中国朋友不要举报，就算你举报，我的备份还在，我可以换个域名重新开放，我是本着互联网的开放共享精神，可惜中国法律并不允许这样做。多余的话不多说了。
+
 
 
 总结：
 
 - 认识到了数据备份的重要性
-  
+- 采用分布式的云备份手段来备份数据
